# markdown-vault

./: .dockerignore  .env.example  .env.test  .envrc  .gitignore  .withcontextconfig.jsonc  AGENTS.md  AUTHOR_UPDATE_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  FIXES_COMPLETE.md  LICENSE  MCP_SUCCESS.md  Makefile  README.dev.md  README.md  REBRANDING_COMPLETE.md  REBRANDING_PLAN.md  RELEASE_v0.0.1.md  SESSION_COMPLETE.md  STATUS.md  TESTING_RESULTS.md  TOOLING_SETUP.md  UVX_USAGE.md  docker-compose.dev.yml  docker-compose.yml  opencode.jsonc  pyproject.toml  test_config.yaml
.github/workflows/: docker-publish.yml  pypi-publish.yml
config/: config.example.yaml  obsidian-integration.example.yaml  obsidian-vault.example.yaml
docs/: CONFIGURATION.md  DOCUMENTATION_SETUP.md  MAKEFILE_GUIDE.md  MCP_TESTING.md  MIGRATION_FROM_PLUGIN.md  OBSIDIAN_VAULT_COMPATIBILITY.md  PLAN.md  PROJECT_SUMMARY.md  RESEARCH.md
examples/: config_demo.py  generate_cert_example.py  vault_manager_usage.py
scripts/: dev-setup.sh  start-test-server.sh
src/markdown_vault/: __init__.py  __main__.py  main.py
src/markdown_vault/api/: __init__.py  deps.py
src/markdown_vault/api/routes/: __init__.py  active.py  commands.py  periodic.py  search.py  system.py  vault.py
src/markdown_vault/cli/: __init__.py
src/markdown_vault/core/: __init__.py  active_file.py  commands.py  config.py  patch_engine.py  periodic_notes.py  search_engine.py  vault.py
src/markdown_vault/models/: __init__.py  api.py  config.py  note.py
src/markdown_vault/utils/: __init__.py  crypto.py  date_utils.py
tests/: conftest.py  test_commands.py  test_config.py  test_crypto.py  test_date_utils.py  test_models.py  test_patch_engine.py  test_periodic_notes.py  test_search.py  test_vault.py
tests/fixtures/sample_vault/: simple.md  with-blocks.md  with-frontmatter.md
tests/fixtures/sample_vault/journal/: 2025-01-01.md
tests/fixtures/sample_vault/notes/: nested-note.md
tests/fixtures/sample_vault/templates/: daily.md
tests/test_api/: test_active_routes.py  test_commands_routes.py  test_patch_routes.py  test_periodic_routes.py  test_search_routes.py  test_system.py  test_vault_routes.py
