[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-vault"
version = "0.0.1"
description = "Standalone REST API service for markdown vault management with Obsidian compatibility"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "David Ibia", email = "pypi@boxpositron.dev"}
]
keywords = ["markdown", "vault-api", "markdown-server", "rest-api", "notes", "obsidian-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-frontmatter>=1.0.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.0",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml",
    "types-aiofiles",
]
watch = [
    "watchdog>=3.0.0",
]
jsonlogic = [
    "json-logic>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/boxpositron/markdown-vault"
Documentation = "https://github.com/boxpositron/markdown-vault/tree/main/docs"
Repository = "https://github.com/boxpositron/markdown-vault"
Issues = "https://github.com/boxpositron/markdown-vault/issues"

[project.scripts]
markdown-vault = "markdown_vault.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_vault"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml",
    "types-aiofiles",
    "pyright>=1.1.407",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise from within except (intentional design for API errors)
    "ANN401", # dynamically typed expressions (Any)
    "S101",   # use of assert (used in tests)
    "S104",   # possible binding to all interfaces (development server)
    "S608",   # possible SQL injection (not using SQL)
    "COM812", # trailing comma (conflicts with black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0911", # too many return statements
    "PLW0603", # global statement (intentional singleton pattern)
    "PLC0415", # import outside top-level (lazy imports for performance)
    "DTZ003",  # datetime.utcnow (used for SSL certs, not user-facing)
    "DTZ005",  # datetime.now without tz (periodic notes use local time)
    "DTZ001",  # datetime without tz (date calculations use local time)
    "A002",    # builtin shadowing (id parameter is domain-appropriate)
    "A001",    # builtin shadowing in class (FileNotFoundError is intentional)
    "A004",    # builtin import shadowing (intentional re-export)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "ANN", "ARG", "PLR2004", "PLC0415"]
"src/markdown_vault/__main__.py" = ["T20"]  # allow print in CLI
"src/markdown_vault/api/routes/*.py" = ["ARG001"]  # FastAPI dependency injection params
"src/markdown_vault/api/deps.py" = ["ARG001"]  # FastAPI dependency injection
"src/markdown_vault/core/config.py" = ["T201", "PTH123", "E402"]  # CLI tool, print allowed
"src/markdown_vault/core/commands.py" = ["ARG001"]  # Handler signature consistency
"src/markdown_vault/main.py" = ["ARG001"]  # FastAPI handlers
"src/markdown_vault/core/periodic_notes.py" = ["ARG002"]  # Interface consistency
"src/markdown_vault/models/api.py" = ["N815"]  # Obsidian API compatibility (errorCode)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "frontmatter.*",
    "markdown_it.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src/markdown_vault"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "standard"  # "off", "basic", "standard", "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = true
reportUnboundVariable = true
reportGeneralTypeIssues = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = false  # Too noisy with third-party libs
reportUnknownArgumentType = false   # Too noisy with third-party libs
reportUnknownMemberType = false     # Too noisy with third-party libs
reportUnknownVariableType = false   # Too noisy with third-party libs

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=markdown_vault",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
